noviBizon.output
Terminals unused in grammar

   FOR
   RETURN


Grammar

    0 $accept: program $end

    1 program: LET declarations IN command_sequence END

    2 declarations: /* empty */
    3             | declaration_seq

    4 declaration_seq: type ident_decl
    5                | declaration_seq type ident_decl

    6 ident_decl: '[' id_seq ']' ';'

    7 id_seq: IDENTIFIER ',' id_seq
    8       | IDENTIFIER

    9 command_sequence: command_sequence command
   10                 | command

   11 command: SKIP ';'
   12        | IDENTIFIER '=' expression ';'
   13        | IF expression THEN command_sequence ELSE command_sequence FI ';'
   14        | WHILE expression DO command_sequence END ';'
   15        | READ IDENTIFIER ';'
   16        | WRITE expression ';'

   17 expression: INTCONST
   18           | DOUBLECONST
   19           | BOOLCONST
   20           | STRCONST
   21           | IDENTIFIER
   22           | '(' expression ')'
   23           | expression '+' expression
   24           | expression '-' expression
   25           | expression '*' expression
   26           | expression '/' expression
   27           | expression '%' expression
   28           | '-' expression
   29           | '!' expression
   30           | expression '<' expression
   31           | expression '>' expression
   32           | expression LE expression
   33           | expression GE expression
   34           | expression EQ expression
   35           | expression NE expression
   36           | expression AND expression
   37           | expression OR expression

   38 type: INT
   39     | DOUBLE
   40     | BOOL
   41     | STRING


Terminals, with rules where they appear

$end (0) 0
'!' (33) 29
'%' (37) 27
'(' (40) 22
')' (41) 22
'*' (42) 25
'+' (43) 23
',' (44) 7
'-' (45) 24 28
'/' (47) 26
';' (59) 6 11 12 13 14 15 16
'<' (60) 30
'=' (61) 12
'>' (62) 31
'[' (91) 6
']' (93) 6
error (256)
INTCONST (258) 17
DOUBLECONST (259) 18
BOOLCONST (260) 19
STRCONST (261) 20
INT (262) 38
DOUBLE (263) 39
BOOL (264) 40
STRING (265) 41
IDENTIFIER (266) 7 8 12 15 21
SKIP (267) 11
READ (268) 15
WRITE (269) 16
IF (270) 13
THEN (271) 13
ELSE (272) 13
FI (273) 13
WHILE (274) 14
DO (275) 14
END (276) 1 14
LET (277) 1
IN (278) 1
FOR (279)
RETURN (280)
OR (281) 37
AND (282) 36
GE (283) 33
LE (284) 32
NE (285) 35
EQ (286) 34
NOT (287)
UMINUS (288)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
declarations (51)
    on left: 2 3, on right: 1
declaration_seq (52)
    on left: 4 5, on right: 3 5
ident_decl (53)
    on left: 6, on right: 4 5
id_seq (54)
    on left: 7 8, on right: 6 7
command_sequence (55)
    on left: 9 10, on right: 1 9 13 14
command (56)
    on left: 11 12 13 14 15 16, on right: 9 10
expression (57)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37, on right: 12 13 14 16 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37
type (58)
    on left: 38 39 40 41, on right: 4 5


state 0

    0 $accept: . program $end

    LET  shift, and go to state 1

    program  go to state 2


state 1

    1 program: LET . declarations IN command_sequence END

    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    BOOL    shift, and go to state 5
    STRING  shift, and go to state 6

    $default  reduce using rule 2 (declarations)

    declarations     go to state 7
    declaration_seq  go to state 8
    type             go to state 9


state 2

    0 $accept: program . $end

    $end  shift, and go to state 10


state 3

   38 type: INT .

    $default  reduce using rule 38 (type)


state 4

   39 type: DOUBLE .

    $default  reduce using rule 39 (type)


state 5

   40 type: BOOL .

    $default  reduce using rule 40 (type)


state 6

   41 type: STRING .

    $default  reduce using rule 41 (type)


state 7

    1 program: LET declarations . IN command_sequence END

    IN  shift, and go to state 11


state 8

    3 declarations: declaration_seq .
    5 declaration_seq: declaration_seq . type ident_decl

    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    BOOL    shift, and go to state 5
    STRING  shift, and go to state 6

    $default  reduce using rule 3 (declarations)

    type  go to state 12


state 9

    4 declaration_seq: type . ident_decl

    '['  shift, and go to state 13

    ident_decl  go to state 14


state 10

    0 $accept: program $end .

    $default  accept


state 11

    1 program: LET declarations IN . command_sequence END

    IDENTIFIER  shift, and go to state 15
    SKIP        shift, and go to state 16
    READ        shift, and go to state 17
    WRITE       shift, and go to state 18
    IF          shift, and go to state 19
    WHILE       shift, and go to state 20

    command_sequence  go to state 21
    command           go to state 22


state 12

    5 declaration_seq: declaration_seq type . ident_decl

    '['  shift, and go to state 13

    ident_decl  go to state 23


state 13

    6 ident_decl: '[' . id_seq ']' ';'

    IDENTIFIER  shift, and go to state 24

    id_seq  go to state 25


state 14

    4 declaration_seq: type ident_decl .

    $default  reduce using rule 4 (declaration_seq)


state 15

   12 command: IDENTIFIER . '=' expression ';'

    '='  shift, and go to state 26


state 16

   11 command: SKIP . ';'

    ';'  shift, and go to state 27


state 17

   15 command: READ . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 28


state 18

   16 command: WRITE . expression ';'

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 37


state 19

   13 command: IF . expression THEN command_sequence ELSE command_sequence FI ';'

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 38


state 20

   14 command: WHILE . expression DO command_sequence END ';'

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 39


state 21

    1 program: LET declarations IN command_sequence . END
    9 command_sequence: command_sequence . command

    IDENTIFIER  shift, and go to state 15
    SKIP        shift, and go to state 16
    READ        shift, and go to state 17
    WRITE       shift, and go to state 18
    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    END         shift, and go to state 40

    command  go to state 41


state 22

   10 command_sequence: command .

    $default  reduce using rule 10 (command_sequence)


state 23

    5 declaration_seq: declaration_seq type ident_decl .

    $default  reduce using rule 5 (declaration_seq)


state 24

    7 id_seq: IDENTIFIER . ',' id_seq
    8       | IDENTIFIER .

    ','  shift, and go to state 42

    $default  reduce using rule 8 (id_seq)


state 25

    6 ident_decl: '[' id_seq . ']' ';'

    ']'  shift, and go to state 43


state 26

   12 command: IDENTIFIER '=' . expression ';'

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 44


state 27

   11 command: SKIP ';' .

    $default  reduce using rule 11 (command)


state 28

   15 command: READ IDENTIFIER . ';'

    ';'  shift, and go to state 45


state 29

   17 expression: INTCONST .

    $default  reduce using rule 17 (expression)


state 30

   18 expression: DOUBLECONST .

    $default  reduce using rule 18 (expression)


state 31

   19 expression: BOOLCONST .

    $default  reduce using rule 19 (expression)


state 32

   20 expression: STRCONST .

    $default  reduce using rule 20 (expression)


state 33

   21 expression: IDENTIFIER .

    $default  reduce using rule 21 (expression)


state 34

   29 expression: '!' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 46


state 35

   28 expression: '-' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 47


state 36

   22 expression: '(' . expression ')'

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 48


state 37

   16 command: WRITE expression . ';'
   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    OR   shift, and go to state 49
    AND  shift, and go to state 50
    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ';'  shift, and go to state 62


state 38

   13 command: IF expression . THEN command_sequence ELSE command_sequence FI ';'
   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    THEN  shift, and go to state 63
    OR    shift, and go to state 49
    AND   shift, and go to state 50
    '<'   shift, and go to state 51
    '>'   shift, and go to state 52
    GE    shift, and go to state 53
    LE    shift, and go to state 54
    NE    shift, and go to state 55
    EQ    shift, and go to state 56
    '+'   shift, and go to state 57
    '-'   shift, and go to state 58
    '*'   shift, and go to state 59
    '/'   shift, and go to state 60
    '%'   shift, and go to state 61


state 39

   14 command: WHILE expression . DO command_sequence END ';'
   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    DO   shift, and go to state 64
    OR   shift, and go to state 49
    AND  shift, and go to state 50
    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61


state 40

    1 program: LET declarations IN command_sequence END .

    $default  reduce using rule 1 (program)


state 41

    9 command_sequence: command_sequence command .

    $default  reduce using rule 9 (command_sequence)


state 42

    7 id_seq: IDENTIFIER ',' . id_seq

    IDENTIFIER  shift, and go to state 24

    id_seq  go to state 65


state 43

    6 ident_decl: '[' id_seq ']' . ';'

    ';'  shift, and go to state 66


state 44

   12 command: IDENTIFIER '=' expression . ';'
   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    OR   shift, and go to state 49
    AND  shift, and go to state 50
    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ';'  shift, and go to state 67


state 45

   15 command: READ IDENTIFIER ';' .

    $default  reduce using rule 15 (command)


state 46

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   29           | '!' expression .
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    $default  reduce using rule 29 (expression)


state 47

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   28           | '-' expression .
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    $default  reduce using rule 28 (expression)


state 48

   22 expression: '(' expression . ')'
   23           | expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    OR   shift, and go to state 49
    AND  shift, and go to state 50
    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ')'  shift, and go to state 68


state 49

   37 expression: expression OR . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 69


state 50

   36 expression: expression AND . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 70


state 51

   30 expression: expression '<' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 71


state 52

   31 expression: expression '>' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 72


state 53

   33 expression: expression GE . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 73


state 54

   32 expression: expression LE . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 74


state 55

   35 expression: expression NE . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 75


state 56

   34 expression: expression EQ . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 76


state 57

   23 expression: expression '+' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 77


state 58

   24 expression: expression '-' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 78


state 59

   25 expression: expression '*' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 79


state 60

   26 expression: expression '/' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 80


state 61

   27 expression: expression '%' . expression

    INTCONST     shift, and go to state 29
    DOUBLECONST  shift, and go to state 30
    BOOLCONST    shift, and go to state 31
    STRCONST     shift, and go to state 32
    IDENTIFIER   shift, and go to state 33
    '!'          shift, and go to state 34
    '-'          shift, and go to state 35
    '('          shift, and go to state 36

    expression  go to state 81


state 62

   16 command: WRITE expression ';' .

    $default  reduce using rule 16 (command)


state 63

   13 command: IF expression THEN . command_sequence ELSE command_sequence FI ';'

    IDENTIFIER  shift, and go to state 15
    SKIP        shift, and go to state 16
    READ        shift, and go to state 17
    WRITE       shift, and go to state 18
    IF          shift, and go to state 19
    WHILE       shift, and go to state 20

    command_sequence  go to state 82
    command           go to state 22


state 64

   14 command: WHILE expression DO . command_sequence END ';'

    IDENTIFIER  shift, and go to state 15
    SKIP        shift, and go to state 16
    READ        shift, and go to state 17
    WRITE       shift, and go to state 18
    IF          shift, and go to state 19
    WHILE       shift, and go to state 20

    command_sequence  go to state 83
    command           go to state 22


state 65

    7 id_seq: IDENTIFIER ',' id_seq .

    $default  reduce using rule 7 (id_seq)


state 66

    6 ident_decl: '[' id_seq ']' ';' .

    $default  reduce using rule 6 (ident_decl)


state 67

   12 command: IDENTIFIER '=' expression ';' .

    $default  reduce using rule 12 (command)


state 68

   22 expression: '(' expression ')' .

    $default  reduce using rule 22 (expression)


state 69

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression
   37           | expression OR expression .

    AND  shift, and go to state 50
    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 37 (expression)


state 70

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   36           | expression AND expression .
   37           | expression . OR expression

    '<'  shift, and go to state 51
    '>'  shift, and go to state 52
    GE   shift, and go to state 53
    LE   shift, and go to state 54
    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 36 (expression)


state 71

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   30           | expression '<' expression .
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 30 (expression)


state 72

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   31           | expression '>' expression .
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 31 (expression)


state 73

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   33           | expression GE expression .
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 33 (expression)


state 74

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   32           | expression LE expression .
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    NE   shift, and go to state 55
    EQ   shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 32 (expression)


state 75

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   35           | expression NE expression .
   36           | expression . AND expression
   37           | expression . OR expression

    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 35 (expression)


state 76

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   34           | expression EQ expression .
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 34 (expression)


state 77

   23 expression: expression . '+' expression
   23           | expression '+' expression .
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 23 (expression)


state 78

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   24           | expression '-' expression .
   25           | expression . '*' expression
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 24 (expression)


state 79

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   25           | expression '*' expression .
   26           | expression . '/' expression
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    $default  reduce using rule 25 (expression)


state 80

   23 expression: expression . '+' expression
   24           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '/' expression
   26           | expression '/' expression .
   27           | expression . '%' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | expression . EQ expression
   35           | expression . NE expression
   36           | expression . AND expression
   37           | expression . OR expression

    $default  reduce using rule 26 (expression)


state 81
